--- a/index.html
+++ b/index.html
@@ -2,14 +2,21 @@
 <html lang="en">
 
 <head>
+  
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/jpeg" href="/assets/portal/logo.svg" />
+  <link rel="icon" type="image/jpeg" href="/logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Vg App">
   <meta name="theme-color" content="#EC1C24">
   <!-- Font Awesome -->
   <!-- Font Awesome -->
   <title>Vg App</title>
+
+  <link rel="icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon-180x180.png" sizes="180x180" />
+  <link rel="mask-icon" href="/mask-icon.svg" color="#FFFFFF">
+   <meta name="theme-color" content="#ffffff">
+  
 </head>
 
 <body>
