--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon-180x180.png" sizes="180x180" />
   <link rel="mask-icon" href="/mask-icon.svg" color="#FFFFFF">
    <meta name="theme-color" content="#ffffff">
-  
+   <script>
+      var global = window; // support sockjs ngốc nghếch
+   </script>
 </head>
 
 <body>
